--- a/Kaggle/Titanic/test.ipynb
+++ b/Kaggle/Titanic/test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "4  22.0      1      1  3101298  12.2875   NaN        S  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1176,7 @@
        "829  female  62.0      0      0  113572  80.0   B28      NaN  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1270,7 @@
        "152      0   3701   NaN   NaN        S  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
        "array(['X', 'C', 'E', 'G', 'D', 'A', 'B', 'F', 'T'], dtype=object)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1375,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -1714,7 +1714,7 @@
        "863      2   CA. 2343   69.5500     X        S  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1725,7 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1734,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1743,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -1772,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1788,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1810,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2079,14 +2079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2100,7 +2093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -2351,13 +2344,20 @@
        "[1293 rows x 13 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_all"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "没做onehot预测结果会变差一点"
    ]
   },
   {
@@ -3023,7 +3023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3033,7 +3033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3042,14 +3042,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AUC = 0.999988968925463\n"
+      "AUC = 0.9999889689254631\n"
      ]
     }
    ],
@@ -3077,7 +3077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3086,7 +3086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3096,7 +3096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -3148,7 +3148,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>896</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -3178,7 +3178,7 @@
        "    <tr>\n",
        "      <th>417</th>\n",
        "      <td>1309</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3191,18 +3191,18 @@
        "1            893         0\n",
        "2            894         0\n",
        "3            895         0\n",
-       "4            896         0\n",
+       "4            896         1\n",
        "..           ...       ...\n",
        "413         1305         0\n",
        "414         1306         1\n",
        "415         1307         0\n",
        "416         1308         0\n",
-       "417         1309         1\n",
+       "417         1309         0\n",
        "\n",
        "[418 rows x 2 columns]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3213,7 +3213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
