--- a/Kaggle/Titanic/test.ipynb
+++ b/Kaggle/Titanic/test.ipynb
@@ -3181,49 +3181,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['PassengerId', 'Pclass', 'Name', ..., 'FamilySize_1',\n",
-       "       'FamilySize_2', 'FamilySize_3'], dtype=object)"
+       "1828"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_rfe"
+    "len(X_rfe)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['PassengerId', 'Pclass', 'Name', 'Sex', 'Age', 'SibSp', 'Parch',\n",
-       "       'Ticket', 'Fare', 'Cabin',\n",
-       "       ...\n",
-       "       'Cabin_9', 'FamilySize_1', 'FamilySize_2', 'FamilySize_3',\n",
-       "       'FamilySize_4', 'FamilySize_5', 'FamilySize_6', 'FamilySize_7',\n",
-       "       'FamilySize_8', 'FamilySize_9'],\n",
-       "      dtype='object', length=2278)"
+       "2278"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_train.columns"
+    "len(X_train.columns)"
    ]
   },
   {
