--- a/Kaggle/Titanic/test.ipynb
+++ b/Kaggle/Titanic/test.ipynb
@@ -6159,6 +6159,15 @@
     "predict.loc[:, 'Survived'] = valid_preds\n",
     "predict[[\"PassengerId\", \"Survived\"]].to_csv(\"./dataset/predict.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ddd"
+   ]
   }
  ],
  "metadata": {
