--- a/RL/easyRL.ipynb
+++ b/RL/easyRL.ipynb
@@ -8,6 +8,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "基于价值的智能体（value-based agent）\n",
+    "显式地学习价值函数，隐式地学习它的策略。策略是其从学到的价值函数里面推算出来的。基于策略的智\n",
+    "能体（policy-based agent）直接学习策略，我们给它一个状态，它就会输出对应动作的概率。基于策略\n",
+    "的智能体并没有学习价值函数。把基于价值的智能体和基于策略的智能体结合起来就有了演员-评论员智\n",
+    "能体（actor-critic agent）\n",
+    "。这一类智能体把策略和价值函数都学习了，然后通过两者的交互得到最佳的\n",
+    "动作。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
