--- a/RL/easyRL.ipynb
+++ b/RL/easyRL.ipynb
@@ -11,21 +11,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "基于价值的智能体（value-based agent）\n",
-    "显式地学习价值函数，隐式地学习它的策略。策略是其从学到的价值函数里面推算出来的。基于策略的智\n",
-    "能体（policy-based agent）直接学习策略，我们给它一个状态，它就会输出对应动作的概率。基于策略\n",
-    "的智能体并没有学习价值函数。把基于价值的智能体和基于策略的智能体结合起来就有了演员-评论员智\n",
-    "能体（actor-critic agent）\n",
-    "。这一类智能体把策略和价值函数都学习了，然后通过两者的交互得到最佳的\n",
-    "动作。"
+    "基于价值的智能体（value-based agent显式地学习价值函数，隐式地学习它的策略。策略是其从学到的价值函数里面推算出来的。\n",
+    "基于策略的智能体（policy-based agent）直接学习策略，我们给它一个状态，它就会输出对应动作的概率。基于策略的智能体并没有学习价值函数。\n",
+    "把基于价值的智能体和基于策略的智能体结合起来就有了演员-评论员智能体（actor-critic agent）。这一类智能体把策略和价值函数都学习了，然后通过两者的交互得到最佳的动作。"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "决策方式是智能体在给定状态下从动作集合中选择一个动作的依据，它是静态的，不随状态变化而变化。在基于策略的强化学习方法中，智能体会制定一套动作策略（确定在给定状态下需要采取何种动作），并根据这个策略进行操作。强化学习算法直接对策略进行优化，使制定的策略能够获得最大的奖励。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "基于价值的强化学习方法中，智能体不需要制定显式的策略，它维护一个价值表格或价值函数，并通过这个价值表格或价值函数来选取价值最大的动作。\n",
+    "基于价值迭代的方法只能应用在不连续的、离散的环境下（如围棋或某些游戏领域），对于动作集合规模庞大、动作连续的场景（如机器人控制领域），其很难学习到较好的结果（此时基于策略迭代的方法能够根据设定的策略来选择连续的动作）。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "基于价值的强化学习算法有 Q 学习（Q-learning）、Sarsa等，\n",
+    "基于策略的强化学习算法有策略梯度（Policy Gradient，PG）算法等\n",
+    "演员-评论员算法同时使用策略和价值评估来做出决策。其中，智能体会根据策略做出动作，而价值函数会对做出的动作给出价值，这样可以在原有的策略梯度算法的基础上加速学习过程，取得更好的效果"
+   ]
   }
  ],
  "metadata": {
