--- a/RL/easyRL.ipynb
+++ b/RL/easyRL.ipynb
@@ -39,6 +39,19 @@
     "基于策略的强化学习算法有策略梯度（Policy Gradient，PG）算法等\n",
     "演员-评论员算法同时使用策略和价值评估来做出决策。其中，智能体会根据策略做出动作，而价值函数会对做出的动作给出价值，这样可以在原有的策略梯度算法的基础上加速学习过程，取得更好的效果"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "add"
+   ]
   }
  ],
  "metadata": {
