--- a/RL/easyRL.ipynb
+++ b/RL/easyRL.ipynb
@@ -49,7 +49,10 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "代码资源\n",
+    "https://github.com/boyin96/Deep-Reinforcement-Learning-Algorithms-with-PyTorch?tab=readme-ov-file"
+   ]
   }
  ],
  "metadata": {
