--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -532,7 +532,26 @@
    "source": [
     "### hypothesis testing\n",
     "\n",
-    "### 信息论，信息熵，互信息"
+    "https://mp.weixin.qq.com/s/gdOQUetaGRTaFncXMN-55Q\n",
+    "\n",
+    "https://zhuanlan.zhihu.com/p/184958085\n",
+    "\n",
+    "### 信息论，信息熵，互信息，gini， kmeans"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### feature importance\n",
+    "\n",
+    "### 多重共线性\n",
+    "\n",
+    "### shapely value\n",
+    "\n",
+    "### 归因\n",
+    "\n",
+    "https://cloud.tencent.com/developer/article/1913745"
    ]
   }
  ],
